RASS-794 set court code correctly from select court name page (#607)
* RASS-794 set court code correctly from select court name page

* changed to previous

--- a/server/views/pages/courtAppearance/select-court-name.njk
+++ b/server/views/pages/courtAppearance/select-court-name.njk
@@ -37,7 +37,7 @@
                         }
                     ]
                 }) }}
-
+                <input type="hidden" name="previousCourtCode" value="{{ previousCourtCode }}">
                 {{ govukButton({
                     text: "Continue",
                     attributes: {  'data-qa': 'continue-button' }
