RAS-816 Ensure state is retained when navigating away from overall-sentence-length page and back again

--- a/server/views/partials/prisonerBannerBackLayout.njk
+++ b/server/views/partials/prisonerBannerBackLayout.njk
@@ -7,7 +7,8 @@
                 <div class="govuk-grid-column-one-half">
                     {{ govukBackLink({
                         text: "Back",
-                        href: backLink
+                        href: backLink,
+                        attributes: {  'data-qa': 'back-link' }
                     }) }}
                     </div>
                 <div class="govuk-grid-column-one-half govuk-!-text-align-right"><a href="/person/{{ nomsId }}" class="govuk-link govuk-body-s">Go to Court cases</a></div>
