all caps updated to capitalized

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -8,7 +8,7 @@
                             text: "Warrant type"
                         },
                             value: {
-                            text: courtAppearance.warrantType
+                            text: courtAppearance.warrantType | capitalize
                         }
                         },
                         {
