RASS-797: Warrant Type added to check answer page and button text updated (#614)
* Warrant Type added to check answer page and button text updated

* repeatCourtCaseJourney checkanswers updated

* newCourtCaseJourney checkanswers updated

* all caps updated to capitalized

---------

Co-authored-by: carloveo-moj <144013256+carloveo-moj@users.noreply.github.com>

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -5,6 +5,14 @@
 {% set checkAnswersRows = [
                         {
                             key: {
+                            text: "Warrant type"
+                        },
+                            value: {
+                            text: courtAppearance.warrantType | capitalize
+                        }
+                        },
+                        {
+                            key: {
                             text: "Case reference"
                         },
                             value: {
@@ -125,7 +133,7 @@
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-answers">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {{ govukButton({
-                    text: "Accept and continue",
+                    text: "Confirm and continue",
                     attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
