RASS-813 wording change on offence date page

--- a/server/views/pages/offence/offence-date.njk
+++ b/server/views/pages/offence/offence-date.njk
@@ -58,7 +58,7 @@
                             }
                         },
                         hint: {
-                            text: "This only applies to offences occuring over multiple days"
+                            text: "This only applies to offences that occur over multiple days"
                         },
                         items: [
                             {
