--- a/server/views/pages/courtAppearance/confirmation.njk
+++ b/server/views/pages/courtAppearance/confirmation.njk
@@ -17,18 +17,22 @@
             <div class="govuk-!-margin-top-6">
                 <h2 class="govuk-heading-l">What you can do next</h2>
                 {% if user.hasAdjustmentsAccess %}
-                    <a href="{{ adjustmentServiceUrl }}/{{ nomsId }}">Add adjustments</a>
-                {% endif %}
                     <div class="govuk-body govuk-!-margin-top-6">
-                        <span>You can {{'also' if user.hasAdjustmentsAccess else ''}} go back to {{ prisoner | firstNameSpaceLastName | pluraliseName }}:</span>
-                        <ul class="govuk-list govuk-!-margin-top-2">
-                            <li><a href="/person/{{ nomsId }}">Court case information</a></li>
-                            <li><a href="{{digitalPrisonServicesUrl}}/prisoner/{{ nomsId }}">Prisoner profile</a></li>
-                        </ul>
+                        <a class="govuk-link" href="{{ adjustmentServiceUrl }}/{{ nomsId }}">Add adjustments</a>
                     </div>
-                    <div class="govuk-!-margin-top-6">
-                <p class="govuk-body">Or, go to the <a href="{{digitalPrisonServicesUrl}}"> DPS homepage</a>.</p>
-            </div>
+                {% endif %}
+                <div class="govuk-body govuk-!-margin-top-6">
+                    <span>You can {{ 'also' if user.hasAdjustmentsAccess else '' }} go back to {{ prisoner | firstNameSpaceLastName | pluraliseName }}:</span>
+                    <ul class="govuk-list govuk-!-margin-top-2">
+                        <li><a class="govuk-link" href="/person/{{ nomsId }}">Court case information</a></li>
+                        <li><a class="govuk-link" href="{{ digitalPrisonServicesUrl }}/prisoner/{{ nomsId }}">Prisoner
+                                profile</a></li>
+                    </ul>
+                </div>
+                <div class="govuk-!-margin-top-6">
+                    <p class="govuk-body">Or, go to the <a class="govuk-link" href="{{ digitalPrisonServicesUrl }}"> DPS
+                            homepage</a>.</p>
+                </div>
             </div>
         </div>
     </div>
