--- a/server/views/pages/courtAppearance/overall-sentence-length.njk
+++ b/server/views/pages/courtAppearance/overall-sentence-length.njk
@@ -1,94 +1,94 @@
-{% extends "../../partials/prisonerBannerBackLayout.njk" %}
+{% extends "../../partials/appearanceDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {% set yesHtml %}
-{{ govukDateInput({
-    id: "sentenceLength",
-    namePrefix: "sentenceLength",
-    errorMessage: errors | findErrorsBeginningWith('sentenceLength'),
-    fieldset: {
-        legend: {
-            text: "Enter the overall sentence length",
-            classes: "govuk-fieldset__legend--m"
-        }
-    },
-    items: [{
-        classes: "govuk-input--width-2" + (" govuk-input--error" if errors | findError('sentenceLength-years') else ''),
-        label: "Years",
-        name:"years",
-        value: courtCaseOverallSentenceLengthForm["sentenceLength-years"]
-    },
-    {
-        classes: "govuk-input--width-2" + (" govuk-input--error" if errors | findError('sentenceLength-months') else ''),
-        label: "Months",
-        name:"months",
-        value: courtCaseOverallSentenceLengthForm["sentenceLength-months"]
-    },
-    {
-        classes: "govuk-input--width-2" + (" govuk-input--error" if errors | findError('sentenceLength-weeks') else ''),
-        label: "Weeks",
-        name:"weeks",
-        value: courtCaseOverallSentenceLengthForm["sentenceLength-weeks"]
-    },
-    {
-        classes: "govuk-input--width-2" + (" govuk-input--error" if errors | findError('sentenceLength-days') else ''),
-        label: "Days",
-        name:"days",
-        value: courtCaseOverallSentenceLengthForm["sentenceLength-days"]
-    }]
-}) }}
-<p class="govuk-body govuk-!-margin-top-2">
-    <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/alternative-overall-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">The sentence length is formatted differently</a>
-</p>
+    {{ govukDateInput({
+        id: "sentenceLength",
+        namePrefix: "sentenceLength",
+        errorMessage: errors | findErrorsBeginningWith('sentenceLength'),
+        fieldset: {
+            legend: {
+                text: "Enter the overall sentence length",
+                classes: "govuk-fieldset__legend--m"
+            }
+        },
+        items: [{
+            classes: "govuk-input--width-2" + (" govuk-input--error" if errors | findError('sentenceLength-years') else ''),
+            label: "Years",
+            name:"years",
+            value: courtCaseOverallSentenceLengthForm["sentenceLength-years"]
+        },
+            {
+                classes: "govuk-input--width-2" + (" govuk-input--error" if errors | findError('sentenceLength-months') else ''),
+                label: "Months",
+                name:"months",
+                value: courtCaseOverallSentenceLengthForm["sentenceLength-months"]
+            },
+            {
+                classes: "govuk-input--width-2" + (" govuk-input--error" if errors | findError('sentenceLength-weeks') else ''),
+                label: "Weeks",
+                name:"weeks",
+                value: courtCaseOverallSentenceLengthForm["sentenceLength-weeks"]
+            },
+            {
+                classes: "govuk-input--width-2" + (" govuk-input--error" if errors | findError('sentenceLength-days') else ''),
+                label: "Days",
+                name:"days",
+                value: courtCaseOverallSentenceLengthForm["sentenceLength-days"]
+            }]
+    }) }}
+    <p class="govuk-body govuk-!-margin-top-2">
+        <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/alternative-overall-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">The
+            sentence length is formatted differently</a>
+    </p>
 {% endset %}
 
 {% set pageTitle = applicationName + " - Add overall sentence length" %}
 
-{% block content %}
+{% block pageContent %}
     {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
-        <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-overall-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
-                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {% include "../../partials/appearanceCaption.njk" %}
+        <form method="post"
+              action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-overall-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
+            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+            {% include "../../partials/offenceCaption.njk" %}
 
-                {{ govukRadios({
-                    name: "hasOverallSentenceLength",
-                    value: courtCaseOverallSentenceLengthForm["hasOverallSentenceLength"],
-                    hint: {
-                        text: "Select one option."
-                    },
-                    fieldset: {
-                        legend: {
-                            text: "Is there an overall sentence length on the warrant?",
-                            classes: "govuk-fieldset__legend--l",
-                            isPageHeading: true
-                        }
-                    },
-                    errorMessage: errors | findError('hasOverallSentenceLength'),
-                    items: [{
-                        value: "true",
-                        text: "Yes",
-                        checked: courtCaseOverallSentenceLengthForm.hasOverallSentenceLength === 'true',
-                        conditional: {
+            {{ govukRadios({
+                name: "hasOverallSentenceLength",
+                value: courtCaseOverallSentenceLengthForm["hasOverallSentenceLength"],
+                hint: {
+                    text: "Select one option."
+                },
+                fieldset: {
+                    legend: {
+                        text: "Is there an overall sentence length on the warrant?",
+                        classes: "govuk-fieldset__legend--l",
+                        isPageHeading: true
+                    }
+                },
+                errorMessage: errors | findError('hasOverallSentenceLength'),
+                items: [{
+                    value: "true",
+                    text: "Yes",
+                    checked: courtCaseOverallSentenceLengthForm.hasOverallSentenceLength === 'true',
+                    conditional: {
                         html: yesHtml
-                        }
-                    },
+                    }
+                },
                     {
                         value: "false",
                         checked: courtCaseOverallSentenceLengthForm.hasOverallSentenceLength === 'false',
                         text: "No"
                     }]
-                }) }}
+            }) }}
 
-                {{ govukButton({
-                    text: "Save and continue",
-                    attributes: {  'data-qa': 'continue-button' }
-                }) }}
+            {{ govukButton({
+                text: "Save and continue",
+                attributes: {  'data-qa': 'continue-button' }
+            }) }}
 
-            </form>
-        </div>
+        </form>
     </div>
 {% endblock %}
