RASS-814 fallback to not entered for no case reference number

--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -31,7 +31,7 @@
                                 text: "Case reference number"
                             },
                             value: {
-                                text: courtAppearance.caseReferenceNumber
+                                text: courtAppearance.caseReferenceNumber if courtAppearance.caseReferenceNumber else 'Not entered'
                             },
                             classes: "offences-summary-card-court-details-row"
                         },
