RASS-839 make sure no case reference check box is unchecked when there is a case reference

--- a/server/views/pages/courtAppearance/reference.njk
+++ b/server/views/pages/courtAppearance/reference.njk
@@ -31,12 +31,12 @@
                     id: "noCaseReference",
                     name: "noCaseReference",
                     errorMessage: errors | findError('noCaseReference'),
-
                     items: [
                         {
                             value: "true",
                             text: "There is no case reference",
-                            checked: courtCaseReferenceForm.noCaseReference === 'true'
+                            checked: courtCaseReferenceForm.noCaseReference === 'true',
+                            attributes: {  'data-qa': 'noCaseReference' }
                         }
                     ]
                     }) }}
