RASS-845 update content depended on next court appearance used (#637)
* RASS-845 update content depended on next court appearance used

* variable name changed

--- a/server/views/pages/courtAppearance/select-court-name.njk
+++ b/server/views/pages/courtAppearance/select-court-name.njk
@@ -22,7 +22,7 @@
                         }
                     },
                     hint: {
-                        text: "This was the court name for the previous appearance."
+                        text: "This was the court name for the scheduled appearance" if nextCourtAppearanceUsed else "This was the court name for the previous appearance."
                     },
                     items: [
                         {
