RASS-846 fallback to not entered when no case reference

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -16,7 +16,7 @@
                             text: "Case reference"
                         },
                             value: {
-                            text: courtAppearance.caseReferenceNumber
+                            text: courtAppearance.caseReferenceNumber if courtAppearance.caseReferenceNumber else 'Not entered'
                         },
                             actions: {
                             items: [
