RAS-804 Correct the caption that is displayed on the overall-sentence-length screen (should be Add Offences)

--- a/server/views/pages/courtAppearance/overall-sentence-length.njk
+++ b/server/views/pages/courtAppearance/overall-sentence-length.njk
@@ -52,6 +52,7 @@
     <form method="post"
           action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-overall-sentence-length{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+        {% set isAddOffences = true %}
         {% include "../../partials/offenceCaption.njk" %}
 
         {{ govukRadios({
