--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -1,4 +1,4 @@
-<span class="govuk-caption-l">
+<span class="govuk-caption-l" data-qa="offences-caption">
     {% if isAddOffences %}
         Add offences
     {% else %}
