--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -59,7 +59,7 @@
                     }
                 }) }}
 
-                {% if offences | length and showOffences %}
+                {% if offences | length and !hideOffences %}
                     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
                     <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Offences</h2>
                     {{ govukSummaryList({
