--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -14,7 +14,7 @@
 
 {% block content %}
     {{ super() }}
-    
+
     <div class="govuk-grid-row govuk-!-margin-top-4">
 
         <div class="govuk-grid-column-two-thirds">
@@ -23,34 +23,27 @@
         <div class="govuk-grid-column-one-third">
             <div class="offence-summary">
                 <h2 class="govuk-heading-m govuk-!-margin-top-4">Appearance details</h2>
-                 {{ govukSummaryList({
+                {{ govukSummaryList({
                     classes: "govuk-summary-list--no-border offences-summary-card-content",
                     rows: [
                         {
-                            key: {
-                                text: "Case reference number"
-                            },
-                            value: {
-                                text: courtAppearance.caseReferenceNumber if courtAppearance.caseReferenceNumber else 'Not entered'
-                            },
+                            key: { text: "Case reference number" },
+                            value: { text: courtAppearance.caseReferenceNumber if courtAppearance.caseReferenceNumber else 'Not entered' },
                             classes: "offences-summary-card-court-details-row"
                         },
                         {
-                            key: {
-                            text: "Court name"
-                        },
-                            value: {
-                            text: courtAppearanceCourtName
-                        },
+                            key: { text: "Court name" },
+                            value: { text: courtAppearanceCourtName },
                             classes: "offences-summary-card-court-details-row"
                         },
                         {
-                            key: {
-                            text: "Warrant date"
+                            key: { text: "Warrant date" },
+                            value: { text: courtAppearance.warrantDate | formatDate},
+                            classes: "offences-summary-card-court-details-row"
                         },
-                            value: {
-                            text: courtAppearance.warrantDate | formatDate
-                        },
+                        {
+                            key: { text: "Overall case outcome" },
+                            value: { text: overallCaseOutcome. },
                             classes: "offences-summary-card-court-details-row"
                         }
                     ],
@@ -67,11 +60,11 @@
                         rows: [
                             {
                                 key: {
-                                    text: "Offences added"
-                                },
+                                text: "Offences added"
+                            },
                                 value: {
-                                    text: offences | length
-                                },
+                                text: offences | length
+                            },
                                 classes: "offences-summary-card-offence-details-row"
                             }
                         ]
