--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -43,7 +43,7 @@
                         },
                         {
                             key: { text: "Overall case outcome" },
-                            value: { text: overallCaseOutcome. },
+                            value: { text: overallCaseOutcome },
                             classes: "offences-summary-card-court-details-row"
                         }
                     ],
