--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -8,6 +8,7 @@
 
 
 {% set offenceSentence = 'sentence' if courtAppearance.warrantType === 'SENTENCING' else 'offence' %}
+{% set sourcePage = 'check-offence-answers' %}
 
 {% set pageTitle = applicationName + " - Check offences" %}
 
