--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -52,7 +52,8 @@
                     }
                 }) }}
 
-                {% if offences | length %}
+                {# This section doesnt show if coming from  the check-offence-answers page#}
+                {% if (offences | length > 0) and not (sourcePage and sourcePage === 'check-offence-answers') %}
                     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
                     <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Offences</h2>
                     {{ govukSummaryList({
@@ -67,7 +68,8 @@
                             },
                                 classes: "offences-summary-card-offence-details-row"
                             }
-                        ]
+                        ],
+                        attributes: { 'data-qa': 'offences-summary-card' }
                     }) }}
                     {{ govukDetails({
                         summaryText: "Show offences",
