Use hideOffences variable to hide offences section in appearranceDetailsLayout

--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -8,7 +8,7 @@
 
 
 {% set offenceSentence = 'sentence' if courtAppearance.warrantType === 'SENTENCING' else 'offence' %}
-{% set sourcePage = 'check-offence-answers' %}
+{% set hideOffences = true %}
 
 {% set pageTitle = applicationName + " - Check offences" %}
 
