--- a/server/views/pages/offence/update-outcome.njk
+++ b/server/views/pages/offence/update-outcome.njk
@@ -5,19 +5,22 @@
 {% set pageTitle = applicationName + " - Update offence outcome" %}
 
 {% set fieldSetHtml %}
-    <h1 class="govuk-fieldset__heading{% if legacyCaseOutcome %} govuk-!-static-margin-bottom-3{% endif %}">What is the new outcome for this offence?</h1>
+    <h1 class="govuk-fieldset__heading">
+        <span class="govuk-caption-l">Update offence outcomes</span>
+        What is the new outcome for this offence?
+    </h1>
     <p class="govuk-body-l" data-qa="offenceParagraph">{{ offence.offenceCode }} - {{ offenceDetails.description }} committed on {{ offence.offenceStartDate | formatDate }}{{" to " + offence.offenceEndDate | formatDate if offence.offenceEndDate }}</p>
 {% endset %}
 
 {% set radiosData = {
-                    name: "offenceOutcome",
-                    fieldset: {
-                        legend: {
-                        html: fieldSetHtml,
-                        classes: "govuk-fieldset__legend--l"
-                        }
-                    },
-                    items: []
+        name: "offenceOutcome",
+        fieldset: {
+            legend: {
+            html: fieldSetHtml,
+            classes: "govuk-fieldset__legend--l"
+            }
+        },
+        items: []
     } %}
 
 {% for caseOutcome in warrantTypeOutcomes %}
@@ -41,16 +44,15 @@
 {% endif %}
 
 {% block pageContent %}
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-update-offence-outcome">
-                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <span class="govuk-caption-l">Update offence outcomes</span>
+    <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-update-offence-outcome">
+        <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
-                {{ govukRadios(radiosData) }}
+        {{ govukRadios(radiosData) }}
 
-                {{ govukButton({
-                    text: "Save and continue",
-                    attributes: {  'data-qa': 'continue-button' }
-                }) }}
-            </form>
+        {{ govukButton({
+            text: "Save and continue",
+            attributes: {  'data-qa': 'continue-button' }
+        }) }}
+    </form>
 
 {% endblock %}
