RASS-682 Content changes on court-name search + lookup after 3 characters entered

--- a/server/views/pages/courtAppearance/next-hearing-court-name.njk
+++ b/server/views/pages/courtAppearance/next-hearing-court-name.njk
@@ -21,7 +21,7 @@
                         isPageHeading: true
                     },
                     hint: {
-                        text: "Search for a court name, address, town or city."
+                        text: "Start typing the name of the court from the warrant."
                     },
                     id: "next-hearing-court-name",
                     name: "nextHearingCourtName",
