--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -26,13 +26,29 @@
                         offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
                         offenceEndDate: offence.offenceEndDate | formatDate,
                         outcome: outcomeMap[offence.outcomeUuid] | outcomeValueOrLegacy(offence.legacyData),
+                        outcomeUpdated: offence.updatedOutcome,
                         countNumber: offence.sentence.countNumber,
                         convictionDate: offence.sentence.convictionDate | formatDate,
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
                         periodLengths: offence.sentence.periodLengths,
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
-                        fineAmount: offence.sentence.fineAmount
+                        fineAmount: offence.sentence.fineAmount,
+                        actions: {
+                            items: [
+                                {
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/edit-offence",
+                                    text: "Edit",
+                                    visuallyHiddenText: "edit offence"
+                                }
+                            ]
+                        },
+                        listItems: {
+                            classes: "govuk-!-margin-top-4 govuk-!-margin-bottom-2",
+                            items: [{
+                                html: '<a href="/person/'+ nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + offence.index + '/update-offence-outcome">Update outcome</a>'
+                            }]
+                        }
                     })
                 }}
             {% endfor %}
@@ -47,13 +63,23 @@
                         offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
                         offenceEndDate: offence.offenceEndDate | formatDate,
                         outcome: outcomeMap[offence.outcomeUuid] | outcomeValueOrLegacy(offence.legacyData),
+                        outcomeUpdated: offence.updatedOutcome,
                         countNumber: offence.sentence.countNumber,
                         convictionDate: offence.sentence.convictionDate | formatDate,
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
                         periodLengths: offence.sentence.periodLengths,
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
-                        fineAmount: offence.sentence.fineAmount
+                        fineAmount: offence.sentence.fineAmount,
+                        actions: {
+                            items: [
+                                {
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/edit-offence",
+                                    text: "Edit",
+                                    visuallyHiddenText: "edit offence"
+                                }
+                            ]
+                        }
                     })
                 }}
             {% else %}
